# NexusDB

./: README.md  clippy_check.sh  mkdocs.yml  package-lock.json  playwright.config.ts
.sisyphus/: ralph-loop.local.md
sensibledb-explorer/: Cargo.toml
sensibledb-explorer/src/: main.rs
sensibledb-explorer/src/commands/: ingestion.rs  mod.rs  ollama.rs
sensibledb-explorer/src/frontend/: package-lock.json  package.json  vitest.config.ts
sensibledb-explorer/src/frontend/coverage/: clover.xml  coverage-final.json  index.html
sensibledb-explorer/src/frontend/coverage/src/: App.tsx.html  index.html  types.ts.html
sensibledb-explorer/src/frontend/coverage/src/data/: glossary.ts.html  index.html
sensibledb-explorer/src/frontend/coverage/src/lib/: api.ts.html  glossary.ts.html  index.html  nl-to-sensibleql.ts.html
sensibledb-explorer/src/frontend/coverage/src/stores/: app.ts.html  index.html
sensibledb-explorer/src/frontend/src/: App.tsx  types.ts
sensibledb-explorer/src/frontend/src/components/chat/: ChatView.css  ChatView.test.tsx  ChatView.tsx
sensibledb-explorer/src/frontend/src/components/onboarding/: ConnectionWizard.test.tsx  ConnectionWizard.tsx
sensibledb-explorer/src/frontend/src/components/settings/: ModelSettings.css  ModelSettings.test.tsx  ModelSettings.tsx
sensibledb-explorer/src/frontend/src/components/sidebar/: Sidebar.test.tsx  Sidebar.tsx
sensibledb-explorer/src/frontend/src/lib/: api.test.ts  api.ts  nl-to-sensibleql.test.ts
sensibledb-explorer/src/frontend/src/stores/: app.test.ts
sensibledb-explorer/src/ollama/: client.rs
(+49 files in other folders)
